// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Components/Input/Textarea Default smoke-test 1`] = `
<div class="container my-10 mx-auto p-4 border rounded-lg shadow-sm">
  <div class="*:not-first:mt-2">
    <label data-slot="label"
           class="flex items-center text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 gap-0.5"
           for="comments"
    >
      Comments
    </label>
    <div class="relative">
      <textarea data-slot="textarea"
                class="border-input placeholder:text-muted-foreground focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 flex field-sizing-content min-h-16 w-full rounded-md border px-3 shadow-xs transition-[color,box-shadow] focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 md:text-sm peer bg-background py-3 text-sm outline-hidden"
                id="comments"
                name="comments"
                aria-required="false"
                aria-invalid="false"
                rows="4"
                placeholder="Enter your comments here"
      >
      </textarea>
    </div>
  </div>
</div>
`;

exports[`Components/Input/Textarea Disabled smoke-test 1`] = `
<div class="container my-10 mx-auto p-4 border rounded-lg shadow-sm">
  <div class="*:not-first:mt-2">
    <label data-slot="label"
           class="flex items-center text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 gap-0.5"
           for="disabled-textarea"
    >
      Disabled Textarea
    </label>
    <div class="relative">
      <textarea data-slot="textarea"
                class="border-input placeholder:text-muted-foreground focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 flex field-sizing-content min-h-16 w-full rounded-md border px-3 shadow-xs transition-[color,box-shadow] focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 md:text-sm peer bg-background py-3 text-sm outline-hidden"
                id="disabled-textarea"
                name="disabled-textarea"
                aria-required="false"
                aria-invalid="false"
                rows="3"
                placeholder="This field is disabled"
                disabled
      >
      </textarea>
    </div>
  </div>
</div>
`;

exports[`Components/Input/Textarea HalfWidth smoke-test 1`] = `
<div class="container my-10 mx-auto p-4 border rounded-lg shadow-sm">
  <div class="*:not-first:mt-2">
    <label data-slot="label"
           class="flex items-center text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 gap-0.5"
           for="half-width"
    >
      Half Width Textarea
    </label>
    <div class="relative">
      <textarea data-slot="textarea"
                class="border-input placeholder:text-muted-foreground focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 flex field-sizing-content min-h-16 w-full rounded-md border px-3 shadow-xs transition-[color,box-shadow] focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 md:text-sm peer bg-background py-3 text-sm outline-hidden"
                id="half-width"
                name="half-width"
                aria-required="false"
                aria-invalid="false"
                rows="4"
                placeholder="This textarea takes half of the available width"
                gridsize="1/2"
      >
      </textarea>
    </div>
  </div>
</div>
`;

exports[`Components/Input/Textarea Required smoke-test 1`] = `
<div class="container my-10 mx-auto p-4 border rounded-lg shadow-sm">
  <div class="*:not-first:mt-2">
    <label data-slot="label"
           class="flex items-center text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 after:content-['*'] after:text-destructive gap-0.5"
           for="required-feedback"
    >
      Required Feedback
    </label>
    <div class="relative">
      <textarea data-slot="textarea"
                class="border-input placeholder:text-muted-foreground focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 flex field-sizing-content min-h-16 w-full rounded-md border px-3 shadow-xs transition-[color,box-shadow] focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 md:text-sm peer bg-background py-3 text-sm outline-hidden"
                id="required-feedback"
                name="required-feedback"
                required
                aria-required="true"
                aria-invalid="false"
                rows="4"
                placeholder="This field is required"
      >
      </textarea>
    </div>
  </div>
</div>
`;

exports[`Components/Input/Textarea WithError smoke-test 1`] = `
<div class="container my-10 mx-auto p-4 border rounded-lg shadow-sm">
  <div class="*:not-first:mt-2">
    <label data-slot="label"
           class="flex items-center text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 gap-0.5"
           for="description"
    >
      Description
    </label>
    <div class="relative">
      <textarea data-slot="textarea"
                class="placeholder:text-muted-foreground focus-visible:border-ring aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 flex field-sizing-content min-h-16 w-full rounded-md border px-3 shadow-xs transition-[color,box-shadow] focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 md:text-sm peer bg-background py-3 text-sm outline-hidden border-destructive focus-visible:ring-destructive/20"
                id="description"
                name="description"
                aria-required="false"
                aria-invalid="true"
                aria-describedby="description-error"
                rows="4"
                placeholder="Enter a description"
      >
      </textarea>
    </div>
    <p id="description-error"
       class="text-destructive mt-2 text-xs"
       role="alert"
    >
      The description is too short
    </p>
  </div>
</div>
`;

exports[`Components/Input/Textarea WithHelperText smoke-test 1`] = `
<div class="container my-10 mx-auto p-4 border rounded-lg shadow-sm">
  <div class="*:not-first:mt-2">
    <label data-slot="label"
           class="flex items-center text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 gap-0.5"
           for="feedback"
    >
      Feedback
    </label>
    <div class="relative">
      <textarea data-slot="textarea"
                class="border-input placeholder:text-muted-foreground focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 flex field-sizing-content min-h-16 w-full rounded-md border px-3 shadow-xs transition-[color,box-shadow] focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 md:text-sm peer bg-background py-3 text-sm outline-hidden"
                id="feedback"
                name="feedback"
                aria-required="false"
                aria-invalid="false"
                aria-describedby="feedback-helper"
                rows="5"
                placeholder="Enter your feedback here"
      >
      </textarea>
    </div>
    <p id="feedback-helper"
       class="text-muted-foreground mt-2 text-xs"
       role="region"
       aria-live="polite"
    >
      Please provide detailed feedback for our team
    </p>
  </div>
</div>
`;
